fixed dark mode, added info to empty state
'

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,10 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;500;600&display=swap');
 
 body {
-  font-family: 'Verdana', sans-serif;
+  font-family: 'Lato', sans-serif !important;
   margin: 0;
   padding: 0;
   background-color: #f7f7f7;
+}
+
+h1 {
+  font-size:x-large;
 }
 
 .container {
@@ -33,6 +37,7 @@ header {
 .header-right button {
   margin-left: 10px;
 }
+
 .model-name {
   font-size: 12px;
   font-weight: 300;
@@ -53,7 +58,7 @@ header {
 }
 
 .side-panel h2 {
-  font-size: 24px;
+  font-size: large;
   font-weight: 600;
   margin-bottom: 10px;
 }
@@ -99,7 +104,7 @@ header {
 }
 
 .bot-message {
-  background-color: #e8f5ff;
+  background-color: #e5f1ff;
   color: #333;
   padding: 10px;
   border-radius: 8px;
@@ -137,7 +142,7 @@ textarea {
   border-radius: 8px;
   background-color: #f1f1f1;
   margin-bottom: 20px;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 16px;
   resize: none;
 }
@@ -149,7 +154,7 @@ button {
   border: none;
   border-radius: 8px;
   cursor: pointer;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 16px;
   font-weight: 500;
   transition: background-color 0.3s ease;
@@ -157,7 +162,6 @@ button {
 
 button:hover {
   background-color: #0056b3;
-  
 }
 
 .new-chat-button:hover {
@@ -183,7 +187,7 @@ button[type='submit'] {
   border: none;
   border-radius: 8px;
   cursor: pointer;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 14px;
   font-weight: 500;
   transition: background-color 0.3s ease;
@@ -246,11 +250,12 @@ body.dark-mode {
 }
 
 .dark-mode button {
-  background-color: #007bff;
+  background-color: #777;
+  color: #fff;
 }
 
 .dark-mode button:hover {
-  background-color: #0056b3;
+  background-color: #666;
 }
 
 .dark-mode .new-chat-button:hover {
@@ -311,6 +316,14 @@ input:checked + .slider:before {
   transform: translateX(26px);
 }
 
+.dark-mode input:checked + .slider {
+  background-color: #777;
+}
+
+.dark-mode input:checked + .slider:before {
+  background-color: #fff;
+}
+
 .modal {
   position: fixed;
   top: 0;
@@ -337,7 +350,6 @@ input:checked + .slider:before {
 
 .input-group {
   margin-bottom: 20px;
-  
 }
 
 .input-group label {
@@ -345,8 +357,7 @@ input:checked + .slider:before {
   margin-bottom: 5px;
 }
 
-.input-field
-{
+.input-field {
   width: 90%;
   padding: 10px;
   border-radius: 4px;
@@ -376,14 +387,12 @@ input:checked + .slider:before {
   border: none;
   font-size: 16px;
   cursor: pointer;
-
-
   margin-top: 20px;
   padding: 10px 20px;
   border: none;
   border-radius: 8px;
   cursor: pointer;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 14px;
   font-weight: 500;
   transition: background-color 0.3s ease;
@@ -445,8 +454,20 @@ input:checked + .slider:before {
 
 .chat-item.selected {
   background-color: #e0e0e0;
+  border-radius: 8px;
 }
 
 .dark-mode .chat-item.selected {
   background-color: #555;
+}
+
+.dark-mode .save-button,
+.dark-mode .cancel-button {
+  background-color: #777;
+  color: #fff;
+}
+
+.dark-mode .save-button:hover,
+.dark-mode .cancel-button:hover {
+  background-color: #666;
 }
